Changelog
=========

1.1 (unreleased)
----------------

- Avoid ComponentLookupError with Plone 4.0.
  [thomasdesvenain]


1.0 (2011-04-06)
----------------

- Initial release.
  [thomasdesvenain]