@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1000</version>
+  <version>1100</version>
+  <dependencies>
+    <dependency>profile-plone.app.registry:default</dependency>
+  </dependencies>
 </metadata>
